--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -30,7 +30,7 @@
 
     &--number {
       color: $main-text-color;
-      font-family: "Inter", sans-serif;
+      font-family: Inter, sans-serif;
       font-size: 12px;
       font-weight: 700;
       letter-spacing: 2px;
